--- a/app/index.html
+++ b/app/index.html
@@ -38,9 +38,10 @@
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-            </ul>
+<!--             <ul class="nav navbar-nav">
+              <li><a href="#/posts/wine">Viinit</a></li>
+              <li><a href="#/posts/food">Ruoat</a></li>
+            </ul> -->
           </div>
         </div>
       </div>
